--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "bootstrap": "^4.5.3",
     "clsx": "^1.1.1",
+    "graphql": "^15.4.0",
+    "graphql-request": "^3.4.0",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.3",
