--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,8 @@
     "baseUrl": "./",
     "paths": {
       "@styles/*": ["styles/*"],
+      "@libs/*": ["libs/*"],
+      "@queries/*": ["queries/*"],
     }
   },
   "include": [
