--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "react": "17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "17.0.1",
+    "react-lazyload": "^3.2.0",
     "sass": "^1.32.4"
   },
   "devDependencies": {
     "@types/node": "^14.14.21",
     "@types/react": "^17.0.0",
+    "@types/react-lazyload": "^3.1.0",
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^4.3.8",
