--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "commit": "git-cz",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "deploy": "vercel --prod --force"
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
@@ -27,7 +28,8 @@
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^4.3.8",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "vercel": "^21.3.1"
   },
   "config": {
     "commitizen": {
