feat(design): team and location page v0.0.1-beta
beta version non stable design team and location pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "baseUrl": "./",
     "paths": {
       "@libs/*": ["libs/*"],
+      "@data-static/*": ["data-static/*"],
       "@styles/*": ["styles/*"],
       "@queries/*": ["queries/*"],
       "@components/*": ["components/*"],
